add feature example
